fixed the left and right paddings of the nav bar link, so they don't break on smaller windows

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ nav{
 }
     nav a{
         color: white;
-        padding: 30px 10%;
+        padding: 30px calc(12.5% - 2.1em);
         text-decoration: none;
         font-size: 17px; 
         margin: 0%;
